[package]
name = "msgpack-converter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"
base64 = "0.22"
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["HtmlTextAreaElement", "HtmlInputElement"] }
num-bigint = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
