[package]
name = "msgpack-converter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src_rust/lib.rs"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlTextAreaElement",
    "HtmlPreElement",
    "console",
    "Selection",
] }
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
rmp-serde = "1.3"
base64 = "0.22"
console_error_panic_hook = "0.1"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
